--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author: brian hubbard
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
 url: "https://bwkiwi.github.io/testsite"
-baseurl: "/monotest"
+baseurl: "/testsite"
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
