--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author: brian hubbard
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: "https://bwkiwi.github.io/testsite"
+url: "https://bwkiwi.github.io"
 baseurl: "/testsite"
 
 # This is for the editing function in _/includes/improve_content
